--- a/platform-fmw-provisioning/roles/jdk_setup/vars/main.yml
+++ b/platform-fmw-provisioning/roles/jdk_setup/vars/main.yml
@@ -1,3 +1,3 @@
-symlink_source: "/u04/jdk/jdk1.8.0_341"
-symlink_name: "/u04/jdk/jdk1.8"
-jdk_file_name: jdk-8u341-linux-x64.tar.gz
+symlink_source: "/u01/java/jdk1.8.0_311"
+symlink_name: "/u01/java/jdk1.8"
+jdk_file_name: jdk-8u311-linux-x64.tar.gz
