--- a/platform-fmw-provisioning/roles/oam_infra_home/vars/main.yml
+++ b/platform-fmw-provisioning/roles/oam_infra_home/vars/main.yml
@@ -1,3 +1,3 @@
-infra_installer_file_name: fmw_12.2.1.4.0_IDM.zip
+infra_installer_file_name: fmw_12.2.1.4.0_idm_linux64.zip
 extract_file_name: fmw_12.2.1.4.0_idm.jar
 rsp_file_name: oam-silent.rsp
