--- a/platform-fmw-provisioning/roles/oam_infra_home/tasks/main.yml
+++ b/platform-fmw-provisioning/roles/oam_infra_home/tasks/main.yml
@@ -3,7 +3,7 @@
   unarchive:
     remote_src: yes
     dest: "{{ installer_location }}"
-    src: "/tmp/{{ infra_installer_file_name }}"
+    src: "/{{ installer_location }}/{{ infra_installer_file_name }}"
     owner: "{{ oam_admin_user }}"
     group: "{{ oracle_group }}"
 
